fixed broken styles

--- a/src/components/animations/anime.module.css
+++ b/src/components/animations/anime.module.css
@@ -35,6 +35,8 @@
 
 
 .loading{
+    left:0;
+    top:0;
     width:100vw;
     height:100vh;
     position:fixed;
