--- a/src/components/handler/handler.module.css
+++ b/src/components/handler/handler.module.css
@@ -1,4 +1,6 @@
 .notfound{
+    top:0;
+    left:0;
     width:100vw;
     height:100vh;
     position:fixed;
